--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "torchvision",
     "transformers[torch]",
     "datasets",
+    "google-genai>= 0.1.0",
 ]
 
 [dependency-groups]
