--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "google-genai>= 0.1.0",
     "sentencepiece>=0.2.1",
     "tokenizers>=0.22.1",
+    "langchain>=1.2.3",
+    "langchain-openai>=1.1.7",
+    "beautifulsoup4>=4.12.0",
 ]
 
 [dependency-groups]
