--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "google-genai>= 0.1.0",
     "sentencepiece>=0.2.1",
     "tokenizers>=0.22.1",
+    "tensorboard",
 ]
 
 [dependency-groups]
